@@ -4506,7 +4506,7 @@ order (MRO) for bases """
         ns = {'__qualname__': 'some.name'}
         tp = type('Foo', (), ns)
         self.assertEqual(tp.__qualname__, 'some.name')
-        self.assertEqual(tp.__dict__['__qualname__'], 'some.name')
+        self.assertNotIn('__qualname__', tp.__dict__)
         self.assertEqual(ns, {'__qualname__': 'some.name'})
 
         ns = {'__qualname__': 1}
@@ -4564,7 +4564,7 @@ class DictProxyTests(unittest.TestCase):
         keys = list(it)
         keys.sort()
         self.assertEqual(keys, ['__dict__', '__doc__', '__module__',
-                                '__qualname__', '__weakref__', 'meth'])
+                                '__weakref__', 'meth'])
 
     @unittest.skipIf(hasattr(sys, 'gettrace') and sys.gettrace(),
                         'trace function introduces __local__')
@@ -4573,7 +4573,7 @@ class DictProxyTests(unittest.TestCase):
         it = self.C.__dict__.values()
         self.assertNotIsInstance(it, list)
         values = list(it)
-        self.assertEqual(len(values), 6)
+        self.assertEqual(len(values), 5)
 
     @unittest.skipIf(hasattr(sys, 'gettrace') and sys.gettrace(),
                         'trace function introduces __local__')
@@ -4584,7 +4584,7 @@ class DictProxyTests(unittest.TestCase):
         keys = [item[0] for item in it]
         keys.sort()
         self.assertEqual(keys, ['__dict__', '__doc__', '__module__',
-                                '__qualname__', '__weakref__', 'meth'])
+                                '__weakref__', 'meth'])
 
     def test_dict_type_with_metaclass(self):
         # Testing type of __dict__ when metaclass set...
